# apply-job-website

./: .breakpoints  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
templates/: footer.html  home.html  jobitem.html  nav.html
